# inventario-ghl

./: .cache_ggshield  .env.example  .gitignore  .mcp.json  CLAUDE.md  CRUSH.md  EJECUTAR_APLICACION.md  README.md  README_v2.md  build_exe.py  build_nuitka.py  debug_api.py  get_location_id.py  get_token.py  main.py  pyproject.toml  test_debug.bat  test_executables.ps1  test_onefile.bat  test_scopes.py  test_standalone.bat
.claude/: settings.local.json
src/: __init__.py  excel_generator.py  excel_generator_xlsx.py  highlevel_api.py  main_window.py  main_window_optimized.py
